--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "module": "dist/stockroom.es.js",
   "main": "dist/stockroom.js",
   "umd:main": "dist/stockroom.umd.js",
-  "typings": "index.d.ts",
+  "typings": "src/index.d.ts",
   "scripts": {
-    "build": "npm-run-all --silent bundle size docs",
+    "build": "npm-run-all --silent bundle size docs types",
     "bundle": "microbundle src/index.js -o dist/stockroom.js && microbundle src/inline.js -o inline/index.js && microbundle src/worker.js -o worker/index.js",
     "size": "strip-json-comments --no-whitespace dist/stockroom.js | gzip-size && bundlesize",
     "docs": "documentation readme src/*.js -q --section API && npm run -s fixreadme",
     "fixreadme": "node -e 'var fs=require(\"fs\");fs.writeFileSync(\"README.md\", fs.readFileSync(\"README.md\", \"utf8\").replace(/^-   /gm, \"- \"))'",
     "test": "eslint src test && npm run bundle && karma start test/karma.conf.js --single-run",
+    "types": "cp-cli src/worker.d.ts worker/index.d.ts && cp-cli src/inline.d.ts inline/index.d.ts",
     "prepare": "npm t",
     "release": "npm t && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish"
   },
@@ -68,6 +69,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "bundlesize": "^0.15.3",
     "chai": "^4.1.2",
+    "cp-cli": "^1.1.2",
     "documentation": "^4.0.0",
     "eslint": "^4.16.0",
     "eslint-config-developit": "^1.1.1",
